Wed Nov  7 15:46:12 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/webrick.rb: fix typo. reported by Rohit Arondekar.
	  https://github.com/ruby/ruby/pull/211

Wed Nov  7 15:34:12 2012  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/core.rb: alias CGI#http_header to CGI#header.

Wed Nov  7 12:49:39 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine): set RMODULE_IS_REFINEMENT to a created
	  refinement module, and don't override method_added.
	
	* vm_method.c (rb_method_entry_make): check redefinition of
	  optimized methods when a method is added to a refinement module.
	  [ruby-core:48970] [Bug #7290]

	* test/ruby/test_refinement.rb: related test.

Wed Nov  7 11:48:14 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): now encoding needs
	  to be set always explicitly actually.  [Feature #6679]

Wed Nov  7 09:15:58 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_const_get): avoid inadvertent symbol creation.

Wed Nov  7 07:52:50 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (rb_enum_cycle_size): prefix with rb.

Wed Nov  7 04:32:15 2012  Luis Lavena  <luislavena@gmail.com>

	* test/ruby/test_file_exhaustive.rb: Remove FIXME skip on Windows
	  specific test because the test in question was already fixed.

Wed Nov  7 03:45:12 2012  Luis Lavena  <luislavena@gmail.com>

	* ext/zlib/extconf.rb: Recognize zlibwapi as linking library.
	  Patch by Daniel Berger.

	  [ruby-core:44979] [Feature #6421]

Wed Nov  7 02:06:40 2012  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* enumerator.c: New method #size; constructor accepts size.
	                Have #to_enum accept a block
	                Warn when using deprecated form of constructor
	                Support #size for enumerators created from enumerators
	                Support for lazy.{map|flat_map|...}.size.

	* include/ruby/intern.h: RETURN_SIZED_ENUMERATOR for support of
	  sized enumerators.
